haskell/hmx/test/HMX/files/ill-typed/010_let_lambda_partial_application.lam
let applfunc = /f. f 1 1 in applfunc (let func = /x. /y. x + 1 - y in func 1)
